Added spotify and shot calculator to home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row">
-      <div class="col">
+
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="../assets/app-images/plex.png" width="286" height="180" alt="Card image cap">
             <div class="card-body">
@@ -11,7 +11,24 @@
                 <a href="http://67.149.193.68:32400/web" class="btn btn-primary">Launch Plex</a>
             </div>
         </div>
-      </div>
+
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../assets/app-images/wip.jpg" width="286" height="180" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Shot Calculator</h5>
+                <p class="card-text">Track your shots taken and approximate BAC throughout the night!</p>
+                <a href="http://shots.jqmittech.haus" class="btn btn-primary">Get Schwifty!</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="../assets/app-images/spot.png" width="286" height="180" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Spotify Tracker</h5>
+                <p class="card-text">See a summary of your recent Spotify stats!</p>
+                <a href="http://spotify.jqmittech.haus" class="btn btn-primary">See My Stats!</a>
+            </div>
+        </div>
   </div>      
 
 </div>
